WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80312
[BlackBerry] The minimum font size WebSetting should actually change the LOGICAL size in WebCore
https://bugs.webkit.org/show_bug.cgi?id=80312
Summary
[BlackBerry] The minimum font size WebSetting should actually change the LOGI...
Eli Fidler
Reported
2012-03-05 12:13:59 PST
The expected behaviour of the web setting is that explicitly set sizes actually work.
Attachments
Patch
(1.75 KB, patch)
2012-03-05 12:20 PST
,
Eli Fidler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eli Fidler
Comment 1
2012-03-05 12:20:14 PST
Created
attachment 130178
[details]
Patch
George Staikos
Comment 2
2012-03-05 12:21:56 PST
Comment on
attachment 130178
[details]
Patch Looks good
WebKit Review Bot
Comment 3
2012-03-05 16:31:56 PST
Comment on
attachment 130178
[details]
Patch Clearing flags on attachment: 130178 Committed
r109814
: <
http://trac.webkit.org/changeset/109814
>
WebKit Review Bot
Comment 4
2012-03-05 16:32:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug