The minimum font size WebSetting should actually change the LOGICAL font size in WebCore. https://bugs.webkit.org/show_bug.cgi?id=80312 RIM PR: 139874

Reviewed by George Staikos.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):


Canonical link: https://commits.webkit.org/97463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109814 268f45cc-cd09-0410-ab3c-d52691b4dbfc